--- a/MyBooks/Base.lproj/Main.storyboard
+++ b/MyBooks/Base.lproj/Main.storyboard
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1oA-Ku-CE6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cNl-t4-GYm">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Searched Books Table View Controller-->
+        <!--検索-->
         <scene sceneID="yg3-di-aDi">
             <objects>
                 <tableViewController id="1oA-Ku-CE6" customClass="SearchedBooksTableViewController" customModule="MyBooks" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,7 +21,7 @@
                             <textInputTraits key="textInputTraits"/>
                         </searchBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="BookTableViewCell" rowHeight="100" id="8Up-hW-PCu" customClass="BookTableViewCell" customModule="MyBooks" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchedBooksTableViewCell" rowHeight="100" id="8Up-hW-PCu" customClass="SearchedBooksTableViewCell" customModule="MyBooks" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="72" width="414" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8Up-hW-PCu" id="eBE-iL-Zd4">
@@ -80,7 +81,7 @@
                                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </state>
                                             <connections>
-                                                <action selector="addButton:" destination="8Up-hW-PCu" eventType="touchUpInside" id="OXR-C3-L7Z"/>
+                                                <action selector="statusButton:" destination="1oA-Ku-CE6" eventType="touchUpInside" id="jcc-KE-fzd"/>
                                             </connections>
                                         </button>
                                     </subviews>
@@ -108,13 +109,86 @@
                             <outlet property="delegate" destination="1oA-Ku-CE6" id="hhy-8b-9i2"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="検索" id="AzH-tN-fA9"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="searchText" destination="lBs-tz-xji" id="xDS-ar-S6i"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QRQ-3v-Cfz" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="168" y="82"/>
+            <point key="canvasLocation" x="1383" y="-331"/>
+        </scene>
+        <!--ライブラリ-->
+        <scene sceneID="Ts1-Eb-nxS">
+            <objects>
+                <collectionViewController id="zDJ-46-veD" customClass="MyBooksCollectionViewController" customModule="MyBooks" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="424-z6-pQe">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CDy-Kz-hSC">
+                            <size key="itemSize" width="132" height="150"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="MyBooksCollectionViewCell" reuseIdentifier="MyBooksCollectionViewCell" id="BrD-Aw-wP7" customClass="MyBooksCollectionViewCell" customModule="MyBooks" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="132" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Hok-Ve-9HN">
+                                    <rect key="frame" x="0.0" y="0.0" width="132" height="150"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SJP-iW-3NP">
+                                            <rect key="frame" x="0.0" y="0.0" width="132" height="132"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="SJP-iW-3NP" secondAttribute="height" multiplier="1:1" id="n8W-Ue-A98"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="SJP-iW-3NP" firstAttribute="top" secondItem="Hok-Ve-9HN" secondAttribute="top" id="Asv-t3-fxa"/>
+                                        <constraint firstAttribute="trailing" secondItem="SJP-iW-3NP" secondAttribute="trailing" id="BMp-Tc-WVb"/>
+                                        <constraint firstItem="SJP-iW-3NP" firstAttribute="leading" secondItem="Hok-Ve-9HN" secondAttribute="leading" id="fpg-ht-DL2"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <size key="customSize" width="132" height="150"/>
+                                <connections>
+                                    <outlet property="photoImageView" destination="SJP-iW-3NP" id="QrO-W4-aju"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="zDJ-46-veD" id="zNg-40-ARb"/>
+                            <outlet property="delegate" destination="zDJ-46-veD" id="a8p-QT-hbq"/>
+                        </connections>
+                    </collectionView>
+                    <tabBarItem key="tabBarItem" title="ライブラリ" id="ctd-3D-0zl"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wHm-ux-WIU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1382.608695652174" y="392.41071428571428"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="r0b-Vi-pKv">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="cNl-t4-GYm" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="PeS-go-qvi">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="zDJ-46-veD" kind="relationship" relationship="viewControllers" id="Oig-TE-XVG"/>
+                        <segue destination="1oA-Ku-CE6" kind="relationship" relationship="viewControllers" id="05w-wY-x6a"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dpk-vI-Mud" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136" y="-27"/>
         </scene>
     </scenes>
 </document>
