--- a/MyBooks/Base.lproj/Main.storyboard
+++ b/MyBooks/Base.lproj/Main.storyboard
@@ -342,11 +342,11 @@
             <objects>
                 <viewController id="gFC-62-41c" customClass="BookImpressionsViewController" customModule="MyBooks" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="uHA-df-5g9" customClass="BookImp">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8rI-bH-bGZ">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="56" width="414" height="752"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Jd-t6-kwP">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="800"/>
@@ -364,8 +364,8 @@
                                                     <constraint firstAttribute="width" constant="250" id="fK3-Ap-FRx"/>
                                                 </constraints>
                                             </stackView>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MhX-M3-YGQ">
-                                                <rect key="frame" x="20" y="152.5" width="374" height="300"/>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="MhX-M3-YGQ">
+                                                <rect key="frame" x="20" y="140" width="374" height="300"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="300" id="OTY-vC-JM4"/>
@@ -433,60 +433,88 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gUr-FB-Tve" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="Vb7-vy-4ea" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="5383" y="13"/>
+            <point key="canvasLocation" x="5091" y="13"/>
         </scene>
         <!--ライブラリ-->
-        <scene sceneID="Ts1-Eb-nxS">
+        <scene sceneID="lHd-Je-0Yw">
             <objects>
-                <collectionViewController id="zDJ-46-veD" customClass="MyBooksCollectionViewController" customModule="MyBooks" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="424-z6-pQe">
+                <viewController id="F7D-iB-kpI" customClass="MyBooksCollectionViewController" customModule="MyBooks" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Cxz-li-2jN">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CDy-Kz-hSC">
-                            <size key="itemSize" width="132" height="150"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="MyBooksCollectionViewCell" reuseIdentifier="MyBooksCollectionViewCell" id="BrD-Aw-wP7" customClass="MyBooksCollectionViewCell" customModule="MyBooks" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="132" height="150"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Hok-Ve-9HN">
-                                    <rect key="frame" x="0.0" y="0.0" width="132" height="150"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SJP-iW-3NP">
-                                            <rect key="frame" x="0.0" y="0.0" width="132" height="132"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="AS2-9w-N2I">
+                                <rect key="frame" x="0.0" y="149" width="414" height="747"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Dwb-mz-9kW">
+                                    <size key="itemSize" width="137" height="257"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="MyBooksCollectionViewCell" reuseIdentifier="MyBooksCollectionViewCell" id="BrD-Aw-wP7" customClass="MyBooksCollectionViewCell" customModule="MyBooks" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="137" height="257"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Hok-Ve-9HN">
+                                            <rect key="frame" x="0.0" y="0.0" width="137" height="257"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SJP-iW-3NP">
+                                                    <rect key="frame" x="0.0" y="0.0" width="137" height="195.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="SJP-iW-3NP" secondAttribute="height" multiplier="7:10" id="1fG-0h-wEt"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="width" secondItem="SJP-iW-3NP" secondAttribute="height" multiplier="1:1" id="n8W-Ue-A98"/>
+                                                <constraint firstItem="SJP-iW-3NP" firstAttribute="top" secondItem="Hok-Ve-9HN" secondAttribute="top" id="Asv-t3-fxa"/>
+                                                <constraint firstAttribute="trailing" secondItem="SJP-iW-3NP" secondAttribute="trailing" id="BMp-Tc-WVb"/>
+                                                <constraint firstItem="SJP-iW-3NP" firstAttribute="leading" secondItem="Hok-Ve-9HN" secondAttribute="leading" id="fpg-ht-DL2"/>
                                             </constraints>
-                                        </imageView>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="SJP-iW-3NP" firstAttribute="top" secondItem="Hok-Ve-9HN" secondAttribute="top" id="Asv-t3-fxa"/>
-                                        <constraint firstAttribute="trailing" secondItem="SJP-iW-3NP" secondAttribute="trailing" id="BMp-Tc-WVb"/>
-                                        <constraint firstItem="SJP-iW-3NP" firstAttribute="leading" secondItem="Hok-Ve-9HN" secondAttribute="leading" id="fpg-ht-DL2"/>
-                                    </constraints>
-                                </collectionViewCellContentView>
-                                <size key="customSize" width="132" height="150"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="137" height="257"/>
+                                        <connections>
+                                            <outlet property="photoImageView" destination="SJP-iW-3NP" id="QrO-W4-aju"/>
+                                            <segue destination="40a-Sd-HfW" kind="show" id="rbU-3i-25t"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="QDz-sy-QQY">
+                                <rect key="frame" x="40" y="108" width="334" height="32"/>
+                                <segments>
+                                    <segment title="全て"/>
+                                    <segment title="読みたい"/>
+                                    <segment title="読んでる"/>
+                                    <segment title="読んだ"/>
+                                </segments>
                                 <connections>
-                                    <outlet property="photoImageView" destination="SJP-iW-3NP" id="QrO-W4-aju"/>
-                                    <segue destination="40a-Sd-HfW" kind="show" id="LsQ-M6-Vth"/>
+                                    <action selector="segmantChanged:" destination="F7D-iB-kpI" eventType="valueChanged" id="zJn-ob-eQX"/>
                                 </connections>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="zDJ-46-veD" id="zNg-40-ARb"/>
-                            <outlet property="delegate" destination="zDJ-46-veD" id="a8p-QT-hbq"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" title="ライブラリ" id="6eS-F9-mFp"/>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wHm-ux-WIU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                            </segmentedControl>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="5e5-wN-BYV" firstAttribute="trailing" secondItem="QDz-sy-QQY" secondAttribute="trailing" constant="40" id="0X0-KN-kdC"/>
+                            <constraint firstItem="AS2-9w-N2I" firstAttribute="leading" secondItem="5e5-wN-BYV" secondAttribute="leading" id="4Hb-QF-QEH"/>
+                            <constraint firstAttribute="bottom" secondItem="AS2-9w-N2I" secondAttribute="bottom" id="DEG-e9-xJT"/>
+                            <constraint firstItem="QDz-sy-QQY" firstAttribute="leading" secondItem="5e5-wN-BYV" secondAttribute="leading" constant="40" id="KMG-sk-cM9"/>
+                            <constraint firstItem="5e5-wN-BYV" firstAttribute="trailing" secondItem="AS2-9w-N2I" secondAttribute="trailing" id="Ykp-6g-mkn"/>
+                            <constraint firstItem="AS2-9w-N2I" firstAttribute="top" secondItem="QDz-sy-QQY" secondAttribute="bottom" constant="10" id="x6D-Zg-gMf"/>
+                            <constraint firstItem="QDz-sy-QQY" firstAttribute="top" secondItem="5e5-wN-BYV" secondAttribute="top" constant="20" id="zxW-U0-qfg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="5e5-wN-BYV"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="ライブラリ" id="xsZ-Oh-9tB"/>
+                    <connections>
+                        <outlet property="collectionView" destination="AS2-9w-N2I" id="yVS-r0-QkX"/>
+                        <outlet property="segmentedControl" destination="QDz-sy-QQY" id="YGF-5N-hy9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bp7-wu-2VI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2292.753623188406" y="392.41071428571428"/>
+            <point key="canvasLocation" x="2292.753623188406" y="391.74107142857139"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="r0b-Vi-pKv">
@@ -524,7 +552,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3hh-qb-daJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4480" y="413"/>
+            <point key="canvasLocation" x="4325" y="478"/>
         </scene>
         <!--検索-->
         <scene sceneID="Rk4-NG-hjq">
@@ -557,7 +585,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="zDJ-46-veD" kind="relationship" relationship="rootViewController" id="tHQ-R3-CEI"/>
+                        <segue destination="F7D-iB-kpI" kind="relationship" relationship="rootViewController" id="rco-Aq-mKB"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aND-Ax-FJ0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -566,7 +594,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="3cJ-1O-rlN"/>
-        <segue reference="LsQ-M6-Vth"/>
+        <segue reference="bFn-Ct-hdt"/>
+        <segue reference="rbU-3i-25t"/>
     </inferredMetricsTieBreakers>
 </document>
